--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -33,7 +33,7 @@
 \newversion{v0.1.3 2018/04/20}
     \change{Added custom dynamic figure path \refKey{figure root directory}.}
     \change{Fixed bugs related to \refCom{phead} and the commands used in \refCom{makeset}-lists.}
-\newversion{@@VERISION @@DATE}
+\newversion{ 2018/04/28}
     % \change{Introduced solutions only: \refCom{SolutionsOnly}}
     \change{Fixed paragraph tightening when displaying solutions}
     \change{Introduced \refCom{DeclareExerciseCommand}}
