Fixed typo in intro.tex closes #39

--- a/docs/intro.tex
+++ b/docs/intro.tex
@@ -102,7 +102,7 @@ your main file to display them.
 
 \subsection{Using \dac{At}}
 \subsubsection{Making your own front page for a set}
-To create your own front page for each set, you'd use\\ \dac{At}\dac{StartBuildset}\brackets{\meta{FrontPageContents}}. Anyhing you send in to \dac{At}\dac{StartBuildset} will be executed before the first problem starts:
+To create your own front page for each set, you'd use\\ \dac{At}\dac{StartBuildset}\brackets{\meta{FrontPageContents}}. Anything you send in to \dac{At}\dac{StartBuildset} will be executed before the first problem starts:
 \begin{dispListing}
   \At\StartBuildset{
     \input{myFrontpage}
