--- a/src/i18n.tex
+++ b/src/i18n.tex
@@ -24,8 +24,8 @@
 
 %
 \gdef\@tr#1{
-\@ifundefined{@tr@#1}{#1}{
-  \csname @tr@#1\endcsname
+\@ifundefined{@tr@#1}{#1}{%
+  \csname @tr@#1\endcsname%
 }
 }
 \makeatother
