--- a/exercises/thirdexercise.tex
+++ b/exercises/thirdexercise.tex
@@ -2,8 +2,7 @@
 \begin{intro}
 Problem intro for thirdexercise
 \end{intro}
-\begin{problem}
-\pptag{TST}
+\begin{problem}\pptag{TST}%
   3rd TEST1
 \end{problem}
 \begin{problem}
