--- a/src/exbankpack.tex
+++ b/src/exbankpack.tex
@@ -7,6 +7,7 @@
 %:§triggers=Triggers
 %:§ref=General reference
 %:§count=Counters
+%:§margs=Lengths and margins
 %:§macroDefs=Macro definitions
 %:$$macrodefs
 %:-
