--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -32,9 +32,11 @@
 
 \newversion{v0.1.3 2018/04/20}
     \change{Added custom dynamic figure path \refKey{figure root directory}.}
-    \change{Fixed bugs related to \refCom{phead} and the commands used in \refCom{makeset}-lists.}
+    \change{Fixed bugs related to \refCom*{phead} and the commands used in \refCom{makeset}-lists.}
 \newversion{@@VERISION @@DATE}
     % \change{Introduced solutions only: \refCom{SolutionsOnly}}
+    \change{Updated margins a lot!}
+    \change{Fixed sneaky space in translation}
     \change{Fixed paragraph tightening when displaying solutions}
     \change{Introduced \refCom{DeclareExerciseCommand}}
     \change{Fixed bug with \refCom{exec}}
